# Unrelevant

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  config.ini  docker-compose.yml  example.env  pyproject.toml  runner.py  setup.sh  yact_runner.py
.docker/: docker-compose.yml  example.env
.docker/postgres/: 01_prep_data.sh  02_initdb-postgis.sh  Dockerfile
.github/workflows/: ci-development.yml
data/: nuts.tar.xz
data/config/: ors-config.json
libs/: helper_functions.sh
misc/: barplot_2.py  barplot_2_pois_per_category.py  barplot_2_pois_total.py
static/: vaccination_here_car_1500sec_2021-02-11_17-55-04.geojson  vaccination_here_pedestrian_1500sec_2021-02-11_17-54-33.geojson  vaccination_ors_driving-car_1500sec_2021-02-10_19-14-04.geojson  vaccination_ors_foot-walking_1500sec_2021-02-10_19-14-41.geojson  vaccination_valhalla_auto_1500sec_2021-02-10_19-13-25.geojson  vaccination_valhalla_pedestrian_1500sec_2021-02-10_19-13-57.geojson
static/flows/: processing_flow
tests/: test_utilities.py
unrelevant/: unrelevant.py
unrelevant/UnrelevantBase/Provider/: BaseProvider.py  (+3 more)
unrelevant/exceptions/: BaseExceptions.py  ConfigExceptions.py  DependencyExceptions.py  IsochronesExceptions.py  ProviderExceptions.py
unrelevant/shared/: utilities.py
yact/: yact.py
yact/exceptions/: BaseExceptions.py  ConfigExceptions.py  DependencyExceptions.py  IsochronesExceptions.py  ProviderExceptions.py
yact/shared/: utilities.py
yasd/: docker-compose.yml
yasd/postgres/: 01_prep_data.sh  02_initdb-postgis.sh  Dockerfile  initdb-postgis.sh
(+10 files in other folders)
